# dataworks-gis

./: .gitignore  Makefile  README.md  geo_joins.ipynb  planning.md  power_data_exploring.ipynb  pyproject.toml  requirements.txt  run_data_range_flow-deployment.yaml  upload_to_bq.py
data/: temp_geos.parquet
dbt_nasa_power/: dbt_project.yml
dbt_nasa_power/models/core/: city_monthly_agg.sql  schema.yml
dbt_nasa_power/models/staging/: city_flux_model.sql  city_geo_model.sql  city_geos_model.sql  schema.yml
flows/: common.py  deletem.ipynb  gcs_to_bq.py  initialize_bq_tables.py  source_to_bq.py  upload_cities.py  upload_to_bq.py  web_to_gcs.py
flows/deployments/: bypass.yaml  gcs_to_bq_data_range_deployment.yaml  gcs_to_bq_deployment.yaml  web_to_gcs_data_range_deployment.yaml  web_to_gcs_deployment.yaml
flows/queries/: geos_table_creation.sql
queries/: flux_table_creation.sql  geos_table_creation.sql
terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
