[tool.poetry]
name = "dataworks-gis"
version = "0.1.0"
description = ""
authors = ["Camilo Ramirez <camilo.ramirez@onlyfy.com>"]
readme = "README.md"
packages = [{include = "dataworks-gis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
ipykernel = "^6.22.0"
boto3 = "^1.26.101"
kafka = "^1.3.5"
websocket-client = "^1.5.1"
rel = "^0.4.8"
requests = "^2.28.2"
xarray = "^2023.3.0"
netcdf4 = "^1.6.3"
matplotlib = "^3.7.1"
fsspec = "^2023.3.0"
aiohttp = "^3.8.4"
zarr = "^2.14.2"
scipy = "^1.10.1"
pympler = "^1.0.1"
shapely = "^2.0.1"
prefect = "2.7.7"
prefect-gcp = {version = "0.2.4", extras = ["cloud_storage"]}
pandas-gbq = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
